✨ ♻️ 🐛 5e traps, hazards, rewards, tables; fixes
- Optional features are now rendered separately
- Optional feature types (EI, PB) are generated as lists of links
- Optional feature types are embedded in notes w/ optional feature progression
- Support for homebrew spell schools, items types, and item properties
- Added Traps/Hazards
- Added Rewards
- Renamed some things, and cleaned up some other things.
- Consistent tag prefix handling
- Consistent content processing order
- 2.0.x / 2.1.x data migration scripts
- Add default templates to packaged examples
- fix magic items; improve action rendering